@@ -1,3 +1,8 @@
+Tue Sep 16 01:44:59 BST 2003  Colin Watson  <cjwatson@debian.org>
+
+	* src/accessdb.c (main): Free each key after listing it rather than
+	  just leaking it.
+
 Mon Sep 15 23:45:33 BST 2003  Byrial Ole Jensen  <byrial@image.dk>
 
 	* po/da.po: Update from Translation Project.
